# chip8-emulator

./: .gitignore  CMakeLists.txt  README.MD
cmake/: FindGLFW.cmake
src/: 440.cpp  440.h  chip8.cpp  chip8.h  chip8builder.cpp  chip8builder.h  chip8factory.h  config.h  constants.h  cpu.cpp  cpu.h  debug.cpp  debug.h  display.cpp  display.h  eventlooper.h  flags.cpp  flags.h  glchip8factory.cpp  glchip8factory.h  gldisplay.cpp  gldisplay.h  gleventlooper.cpp  gleventlooper.h  glkeypad.cpp  glkeypad.h  globals.h  glpowersupply.cpp  glpowersupply.h  glsoloudchip8factory.cpp  glsoloudchip8factory.h  glwindow.cpp  glwindow.h  keypad.h  linuxutils.cpp  linuxutils.h  main.cpp  memory.cpp  memory.h  powersupply.h  (+7 more)
src/dummy/: dummydisplay.cpp  dummydisplay.h  dummyeventlooper.cpp  dummyeventlooper.h  dummykeypad.cpp  dummykeypad.h  dummyspeaker.cpp  dummyspeaker.h
src/gl/: gldisplay.cpp  gldisplay.h  gleventlooper.cpp  gleventlooper.h  glkeypad.cpp  glkeypad.h  glwindow.cpp  glwindow.h
src/nc/: ncdisplay.cpp  ncdisplay.h  nceventlooper.cpp  nceventlooper.h  nckeypad.cpp  nckeypad.h  ncwindow.cpp  ncwindow.h
src/soloud/: soloudspeaker.cpp  soloudspeaker.h
